--- a/MyProject/templates/add_post.html
+++ b/MyProject/templates/add_post.html
@@ -2,15 +2,15 @@
 
 {% block content %}
 
-<h1>Добавление статьи</h1>
+<h1>Добавление услуги</h1>
 
 {% for cat, msg in get_flashed_messages(True) %}
 <div class="flash {{ cat }}">{{ msg }}</div>
 {% endfor %}
 
 <form action="{{ url_for('add_post') }}" method="post">
-  <p>Название статьи: <input type="text" name="name" required></p>
-  <p>Текст статьи:</p>
+  <p>Название услуги: <input type="text" name="name" required></p>
+  <p>Описание услуги:</p>
   <p><textarea name="post" cols="40" rows="7"></textarea></p>
   <p><input type="submit" value="Добавить"></p>
 </form>
