--- a/MyProject/templates/base.html
+++ b/MyProject/templates/base.html
@@ -8,7 +8,7 @@
 <body>
 <ul class="menu">
     {% for m in menu %}
-        <li><a href="{{ m.url }}">{{ m.name }}</a></li>
+        <li><a href="{{ m.url }}">{{ m.title }}</a></li>
     {% endfor %}
 </ul>
 
