--- a/MyProject/static/css/style.css
+++ b/MyProject/static/css/style.css
@@ -35,3 +35,38 @@ padding: 0;
     border: 1px solid red;
     background: rgb(253, 225, 225)
 }
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+p > a{
+    text-decoration: none;
+    color: brown;
+}
+
+li > p, li div{
+    border: 1px solid #CCCCCC;
+    padding: 10px 20px;
+}
+
+p.title{
+    margin: 0;
+    font-weight: bold;
+    background: gold;    
+}
+
+p.title a{
+    display: block;
+    padding: 10px 0;
+}
+
+p.title:hover{
+    background: orange;
+}
+
+.annonce{
+    margin-top: -1px;
+    margin-bottom: 40px;
+    background: #FFF;
+}
