--- a/MY_Django/personal_portfolio/skills/templates/skills/index.html
+++ b/MY_Django/personal_portfolio/skills/templates/skills/index.html
@@ -1,7 +1,27 @@
 {% extends 'skills/base.html' %}
-
+{% load static %}
 {% block content %}
 
-<h1>Пробная страница</h1>
+<h1>ГК "ЮСИ" Краснодар</h1>
+
+<div class="img">
+    <img src="{% static 'skills/usi.jpeg' %}" alt="">
+</div>
+
+<h2>ЮгСтройИнвест — создатель концептуальных микрорайонов для комфортной жизни.</h2>
+
+<div class="block">
+    {% for project in projects %}
+    <div class="element">
+        <div><img src="{{ project.image.url }}" alt=""></div>
+        <div class="text">
+            <h2>
+                <a href="{{ project.url }}" target="_blank">{{ project.title }}</a>
+            </h2>
+            <p>{{ project.description }}</p>
+        </div>
+    </div>
+    {% endfor %}
+</div>
 
 {% endblock %}
