--- a/MY_Django/personal_portfolio/skills/templates/skills/base.html
+++ b/MY_Django/personal_portfolio/skills/templates/skills/base.html
@@ -3,10 +3,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>ГК ЮСИ</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'skills/favicon.ico' %}">
 </head>
 <body>
+
+<div class="menu">
+    <div class="wrap">
+        <div class="logo">
+            <a href="{% url 'index' %}">
+                <img src="{% static 'skills/logo.png' %}" alt="">
+            </a>
+        </div>
+        <ul>
+            <li><a href="{% url 'index' %}">Главная</a></li>
+            <li><a href="{% url 'blogs' %}">Блог</a></li>
+            <li><a href="{% static 'skills/komanda.pdf' %}" target="_blank" >Команда</a></li>
+        </ul>
+    </div>
+</div>
+
   <div class="content">
     <div class="wrap">
       {% block content %}
