--- a/THIRD/todos/todo/templates/todo/currenttodos.html
+++ b/THIRD/todos/todo/templates/todo/currenttodos.html
@@ -4,4 +4,42 @@
 
 <h1>Задачи:</h1>
 
+<ul>
+    {% for todo in todos %}
+    <li>
+        <a href="{% url 'viewtodo' todo.id %}">
+            {% if todo.important %}
+            <b>{{ todo.title }}</b>
+            {% else %}
+            {{ todo.title }}
+            {% endif %}
+
+            {% if todo.memo %}
+             - {{ todo.memo }}
+            {% endif %}
+        </a>
+    </li>
+    {% endfor %}
+</ul>
+
+<table border="1">
+    <tr>
+        {% for todo in todos %}
+        <td>
+            <a href="{% url 'viewtodo' todo.id %}">
+                {% if todo.important %}
+                <b>{{ todo.title }}</b>
+                {% else %}
+                {{ todo.title }}
+                {% endif %}
+
+                {% if todo.memo %}
+                 - {{ todo.memo }}
+                {% endif %}
+            </a>
+        </td>
+    {% endfor %}
+    </tr>
+</table>
+
 {% endblock %}
