--- a/MY_Django/personal_portfolio/skills/static/css/style.css
+++ b/MY_Django/personal_portfolio/skills/static/css/style.css
@@ -53,10 +53,10 @@ h2{
  
 .img img{
     border: 6px solid #FFF;
-}
+    }
 
 .top{
-    background: #663366;
+    background: #d9d6d9;
     margin: 0;
 }
 
@@ -86,9 +86,9 @@ h2{
 }
 
 .menu{
-    background: lightyellow;
+    background: rgb(212, 212, 212);
     padding: 10px;
-    border-bottom: 6px solid #FFF;
+    box-shadow: 0 2px 12px 2px grey;
 }
 
 .menu .wrap{
@@ -99,7 +99,7 @@ h2{
 }
 
 .menu a{
-    color: #663366;
+    color: #030303;
     font-weight: bold;
     text-decoration: none;
 }
@@ -113,4 +113,49 @@ h2{
 
 .menu li{
     margin-left: 40px;
+}
+
+.content .wrap{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+}
+h1, h2{
+    color: #003366;
+}
+
+.btn{
+    background: #003366;
+    color: #FFF;
+}
+
+button{
+    border-radius: 6px;
+    box-shadow: inset 0 0 6px 2px #FFF;
+    padding: 10px 40px;
+    margin-top: 40px;
+    font-size: 20px;
+    cursor: pointer;
+}
+.center{
+    text-align: center;
+}
+
+input{
+    width: 100%;
+    padding: 6px 10px;
+    box-sizing: border-box;
+    margin-top: 4px;
+    margin-bottom: 10px;
+}
+
+.top{
+    padding: 4px 24px;
+    margin-top: 0;
+    background: transparent;
+    border: none;
+    color: #FFF;
+    box-shadow: none;
 }
