--- a/MY_Django/personal_portfolio/skills/templates/skills/base.html
+++ b/MY_Django/personal_portfolio/skills/templates/skills/base.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+
+
 <div class="menu">
     <div class="wrap">
         <div class="logo">
@@ -16,19 +18,35 @@
                 <img src="{% static 'skills/logo.png' %}" alt="">
             </a>
         </div>
+
         <ul>
+        {% if user.is_authenticated %}
+            <li>Пользователь: {{ user.username }}</li>
             <li><a href="{% url 'index' %}">Главная</a></li>
-            <li><a href="{% url 'blogs' %}">Блог</a></li>
+            <li><a href="{% url 'blogs' %}">Новости</a></li>
             <li><a href="{% static 'skills/komanda.pdf' %}" target="_blank" >Команда</a></li>
+            <li><a href="{% url 'currenttodos' %}">Выбрать квартиру</a></li>
+            <li>
+                <form action="{% url 'logoutuser' %}" method="post">
+                    {% csrf_token %}
+                    <button class="top">Выйти</button>
+                </form>
+            </li>
+
+        {% else %}
+            <li><a href="{% url 'signupuser' %}">Зарегистрироваться</a></li>
+            <li><a href="{% url 'loginuser' %}">Войти</a></li>
+        {% endif %}
         </ul>
     </div>
 </div>
+
 
   <div class="content">
     <div class="wrap">
       {% block content %}
       {% endblock %}
-  </div>
+    </div>
   </div>
 </body>
 </html>
