--- a/THIRD/todos/todo/templates/todo/base.html
+++ b/THIRD/todos/todo/templates/todo/base.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-
 <div class="menu">
     <div class="wrap">
         <ul>
         {% if user.is_authenticated %}
             <li class="logo">Пользователь: {{ user.username }}</li>
+            <li><a href="{% url 'createtodo' %}">Создать</a></li>
             <li><a href="{% url 'currenttodos' %}">Актуальные</a></li>
+            <li><a href="{% url 'completedtodos' %}">Выполненные</a></li>
             <li>
                 <form action="{% url 'logoutuser' %}" method="post">
                     {% csrf_token %}
@@ -22,12 +23,11 @@
             </li>
         {% else %}
             <li><a href="{% url 'signupuser' %}">Зарегистрироваться</a></li>
-            <li><a href="">Войти</a></li>
+            <li><a href="{% url 'loginuser' %}">Войти</a></li>
         {% endif %}
         </ul>
     </div>
 </div>
-
 <div class="content">
     <div class="wrap">
         {% block content %}
